codepkg/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Of_Students__c</fullName>
        <label>Amount Of Students</label>
        <summarizedField>Group__c.Students_Amount__c</summarizedField>
        <summaryForeignKey>Group__c.Department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chief</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Teacher</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Employee_WorkFlow__c</fullName>
        <label>Count Employee WorkFlow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipName>Departments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>